--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -8,15 +8,17 @@
 </ion-header>
 
 <ion-content>
+    <form #f="ngForm" (ngSubmit)="login(f)">
     <ion-list lines="full" class="ion-no-margin">
         <ion-item>
             <ion-label position="floating">Username</ion-label>
-            <ion-input [(ngModel)]="username"></ion-input>
+            <ion-input ngModel required name="username"></ion-input>
         </ion-item>
         <ion-item>
             <ion-label position="floating">Password</ion-label>
-            <ion-input type="password" [(ngModel)]="password"></ion-input>
+            <ion-input type="password" ngModel required name="password"></ion-input>
         </ion-item>
     </ion-list>
-    <ion-button (click)="login()" expand="block" color="tertiary" class="ml-10 mr-10 mt-10">Login</ion-button>
+    <ion-button type="submit" expand="block" color="tertiary" class="ml-10 mr-10 mt-10">Login</ion-button>
+    </form>
 </ion-content>
