--- a/src/app/list-kegiatan/list-kegiatan.page.html
+++ b/src/app/list-kegiatan/list-kegiatan.page.html
@@ -1,9 +1,19 @@
-<ion-header>
+<ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>ListKegiatan</ion-title>
+      <ion-buttons slot="start">
+          <ion-menu-button></ion-menu-button>
+      </ion-buttons>
+      <ion-title>{{ appName }}</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-
+  <ion-list lines="full" class="ion-no-margin" *ngFor="let kegiatan of list_kegiatan; let i = index">
+      <ion-item>
+        <ion-label class="ion-text-wrap">
+          {{ kegiatan.Ket_Kegiatan }}
+        </ion-label>
+        <ion-icon name="chevron-forward-outline" size="large" slot="end"></ion-icon>
+      </ion-item>
+  </ion-list>
 </ion-content>
