--- a/src/app/list-kegiatan/list-kegiatan.page.html
+++ b/src/app/list-kegiatan/list-kegiatan.page.html
@@ -8,11 +8,9 @@
 </ion-header>
 
 <ion-content>
-  <ion-list lines="full" class="ion-no-margin" *ngFor="let kegiatan of list_kegiatan; let i = index">
-      <ion-item>
-        <ion-label class="ion-text-wrap">
-          {{ kegiatan.Ket_Kegiatan }}
-        </ion-label>
+  <ion-list lines="full" class="ion-no-margin">
+      <ion-item  *ngFor="let kegiatan of list_kegiatan; let i = index" (click)="listRekening(kegiatan.ID_Prog, kegiatan.Kd_Prog, kegiatan.Kd_Keg)">
+        <ion-label class="ion-text-wrap"> {{ kegiatan.Ket_Kegiatan }} <br> {{ formatUang(kegiatan.total_induk) }}</ion-label>
         <ion-icon name="chevron-forward-outline" size="large" slot="end"></ion-icon>
       </ion-item>
   </ion-list>
