--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,6 +11,10 @@
               <ion-icon slot="start" [ios]="p.icon + '-outline'" [md]="p.icon + '-sharp'"></ion-icon>
               <ion-label>{{ p.title }}</ion-label>
             </ion-item>
+            <ion-item routerDirection="root" lines="none" detail="false" routerLinkActive="selected" (click)="logout()" >
+              <ion-icon slot="start" [ios]="'arrow-undo-outline'" [md]="'arrow-undo-outline'"></ion-icon>
+              <ion-label>Logout</ion-label>
+            </ion-item>
           </ion-menu-toggle>
         </ion-list>
 
