--- a/src/app/detail-rekening/detail-rekening.page.html
+++ b/src/app/detail-rekening/detail-rekening.page.html
@@ -3,19 +3,433 @@
     <ion-buttons slot="start">
       <ion-back-button></ion-back-button>
     </ion-buttons>
+    <ion-buttons slot="end">
+      <ion-button (click)="showPopover($event)">
+        <ion-icon slot="icon-only" ios="ellipsis-vertical" md="ellipsis-vertical"></ion-icon>
+      </ion-button>
+    </ion-buttons>
     <ion-title>{{ pageTitle }}</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large"> Detail Rekening </ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content>
+  
+  <div *ngIf="detail_rekening" >
+    <h3>Data Keuangan</h3>
+    <ion-list lines="full" class="ion-no-margin">
+      <ion-item>
+        <ion-label>
+          <ion-text color="primary"> Januari </ion-text>
+          <ion-row>
+            <ion-col> Target </ion-col>
+            <ion-col> {{ printKeuangan(detail_rekening.target_keuangan[0].total_jan) }} </ion-col>
+          </ion-row>
+          <ion-row>
+            <ion-col> Realisasi </ion-col>
+            <ion-col> {{ printKeuangan(detail_rekening.realisasi_keuangan[0].total_jan) }} </ion-col>
+          </ion-row>
+        </ion-label>
+      </ion-item>
+      <ion-item>
+        <ion-label>
+          <ion-text color="primary"> Februari </ion-text>
+          <ion-row>
+            <ion-col> Target </ion-col>
+            <ion-col> {{ printKeuangan(detail_rekening.target_keuangan[0].total_feb) }} </ion-col>
+          </ion-row>
+          <ion-row>
+            <ion-col> Realisasi </ion-col>
+            <ion-col> {{ printKeuangan(detail_rekening.realisasi_keuangan[0].total_feb) }} </ion-col>
+          </ion-row>
+        </ion-label>
+      </ion-item>
+      <ion-item>
+        <ion-label>
+          <ion-text color="primary"> Maret </ion-text>
+          <ion-row>
+            <ion-col> Target </ion-col>
+            <ion-col> {{ printKeuangan(detail_rekening.target_keuangan[0].total_mar) }} </ion-col>
+          </ion-row>
+          <ion-row>
+            <ion-col> Realisasi </ion-col>
+            <ion-col> {{ printKeuangan(detail_rekening.realisasi_keuangan[0].total_mar) }} </ion-col>
+          </ion-row>
+        </ion-label>
+      </ion-item>
+      <ion-item>
+        <ion-label>
+          <ion-text color="primary"> April </ion-text>
+          <ion-row>
+            <ion-col> Target </ion-col>
+            <ion-col> {{ printKeuangan(detail_rekening.target_keuangan[0].total_apr) }} </ion-col>
+          </ion-row>
+          <ion-row>
+            <ion-col> Realisasi </ion-col>
+            <ion-col> {{ printKeuangan(detail_rekening.realisasi_keuangan[0].total_apr) }} </ion-col>
+          </ion-row>
+        </ion-label>
+      </ion-item>
+      <ion-item>
+        <ion-label>
+          <ion-text color="primary"> Mei </ion-text>
+          <ion-row>
+            <ion-col> Target </ion-col>
+            <ion-col> {{ printKeuangan(detail_rekening.target_keuangan[0].total_mei) }} </ion-col>
+          </ion-row>
+          <ion-row>
+            <ion-col> Realisasi </ion-col>
+            <ion-col> {{ printKeuangan(detail_rekening.realisasi_keuangan[0].total_mei) }} </ion-col>
+          </ion-row>
+        </ion-label>
+      </ion-item>
+      <ion-item>
+        <ion-label>
+          <ion-text color="primary"> Juni </ion-text>
+          <ion-row>
+            <ion-col> Target </ion-col>
+            <ion-col> {{ printKeuangan(detail_rekening.target_keuangan[0].total_jun) }} </ion-col>
+          </ion-row>
+          <ion-row>
+            <ion-col> Realisasi </ion-col>
+            <ion-col> {{ printKeuangan(detail_rekening.realisasi_keuangan[0].total_jun) }} </ion-col>
+          </ion-row>
+        </ion-label>
+      </ion-item>
+      <ion-item>
+        <ion-label>
+          <ion-text color="primary"> Juli </ion-text>
+          <ion-row>
+            <ion-col> Target </ion-col>
+            <ion-col> {{ printKeuangan(detail_rekening.target_keuangan[0].total_jul) }} </ion-col>
+          </ion-row>
+          <ion-row>
+            <ion-col> Realisasi </ion-col>
+            <ion-col> {{ printKeuangan(detail_rekening.realisasi_keuangan[0].total_jul) }} </ion-col>
+          </ion-row>
+        </ion-label>
+      </ion-item>
+      <ion-item>
+        <ion-label>
+          <ion-text color="primary"> Agustus </ion-text>
+          <ion-row>
+            <ion-col> Target </ion-col>
+            <ion-col> {{ printKeuangan(detail_rekening.target_keuangan[0].total_agt) }} </ion-col>
+          </ion-row>
+          <ion-row>
+            <ion-col> Realisasi </ion-col>
+            <ion-col> {{ printKeuangan(detail_rekening.realisasi_keuangan[0].total_agt) }} </ion-col>
+          </ion-row>
+        </ion-label>
+      </ion-item>
+      <ion-item>
+        <ion-label>
+          <ion-text color="primary"> September </ion-text>
+          <ion-row>
+            <ion-col> Target </ion-col>
+            <ion-col> {{ printKeuangan(detail_rekening.target_keuangan[0].total_sep) }} </ion-col>
+          </ion-row>
+          <ion-row>
+            <ion-col> Oktober </ion-col>
+            <ion-col> {{ printKeuangan(detail_rekening.realisasi_keuangan[0].total_sep) }} </ion-col>
+          </ion-row>
+        </ion-label>
+      </ion-item>
+      <ion-item>
+        <ion-label>
+          <ion-text color="primary"> Oktober </ion-text>
+          <ion-row>
+            <ion-col> Target </ion-col>
+            <ion-col> {{ printKeuangan(detail_rekening.target_keuangan[0].total_okt) }} </ion-col>
+          </ion-row>
+          <ion-row>
+            <ion-col> Realisasi </ion-col>
+            <ion-col> {{ printKeuangan(detail_rekening.realisasi_keuangan[0].total_okt) }} </ion-col>
+          </ion-row>
+        </ion-label>
+      </ion-item>
+      <ion-item>
+        <ion-label>
+          <ion-text color="primary"> Nopember </ion-text>
+          <ion-row>
+            <ion-col> Target </ion-col>
+            <ion-col> {{ printKeuangan(detail_rekening.target_keuangan[0].total_nop) }} </ion-col>
+          </ion-row>
+          <ion-row>
+            <ion-col> Realisasi </ion-col>
+            <ion-col> {{ printKeuangan(detail_rekening.realisasi_keuangan[0].total_nop) }} </ion-col>
+          </ion-row>
+        </ion-label>
+      </ion-item>
+      <ion-item>
+        <ion-label>
+          <ion-text color="primary"> Desember </ion-text>
+          <ion-row>
+            <ion-col> Target </ion-col>
+            <ion-col> {{ printKeuangan(detail_rekening.target_keuangan[0].total_des) }} </ion-col>
+          </ion-row>
+          <ion-row>
+            <ion-col> Realisasi </ion-col>
+            <ion-col> {{ printKeuangan(detail_rekening.realisasi_keuangan[0].total_des) }} </ion-col>
+          </ion-row>
+        </ion-label>
+      </ion-item>
+    </ion-list>
 
-  <div id="container">
-    <strong class="capitalize"> Detail Rekening </strong>
-    <p>Explore <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
+    <h3>Data Realisasi Fisik</h3>
+    <ion-list lines="full" class="ion-no-margin">
+      <ion-item>
+        <ion-label>
+          <ion-text color="primary"> Januari </ion-text>
+          <ion-row>
+            <ion-col>Target Induk</ion-col>
+            <ion-col>Realisasi Induk</ion-col>
+          </ion-row>
+          <ion-row>
+            <ion-col> {{ printRealisasiFisik(detail_rekening.target_fisik_induk[0].b_1) }} </ion-col>
+            <ion-col> {{ printRealisasiFisik(detail_rekening.realisasi_fisik_induk[0].b_1) }} </ion-col>
+          </ion-row>
+          <ion-row>
+            <ion-col>Target Perubahan</ion-col>
+            <ion-col>Realisasi Perubahan</ion-col>
+          </ion-row>
+          <ion-row>
+            <ion-col> {{ printRealisasiFisik(detail_rekening.target_fisik_induk[0].b_1) }} </ion-col>
+            <ion-col> {{ printRealisasiFisik(detail_rekening.realisasi_fisik_induk[0].b_1) }} </ion-col>
+          </ion-row>
+        </ion-label>
+      </ion-item>
+      <ion-item>
+        <ion-label>
+          <ion-text color="primary"> Februari </ion-text>
+          <ion-row>
+            <ion-col>Target Induk</ion-col>
+            <ion-col>Realisasi Induk</ion-col>
+          </ion-row>
+          <ion-row>
+            <ion-col> {{ printRealisasiFisik(detail_rekening.target_fisik_induk[0].b_2) }} </ion-col>
+            <ion-col> {{ printRealisasiFisik(detail_rekening.realisasi_fisik_induk[0].b_2) }} </ion-col>
+          </ion-row>
+          <ion-row>
+            <ion-col>Target Perubahan</ion-col>
+            <ion-col>Realisasi Perubahan</ion-col>
+          </ion-row>
+          <ion-row>
+            <ion-col> {{ printRealisasiFisik(detail_rekening.target_fisik_induk[0].b_2) }} </ion-col>
+            <ion-col> {{ printRealisasiFisik(detail_rekening.realisasi_fisik_induk[0].b_2) }} </ion-col>
+          </ion-row>
+        </ion-label>
+      </ion-item>
+      <ion-item>
+        <ion-label>
+          <ion-text color="primary"> Maret </ion-text>
+          <ion-row>
+            <ion-col>Target Induk</ion-col>
+            <ion-col>Realisasi Induk</ion-col>
+          </ion-row>
+          <ion-row>
+            <ion-col> {{ printRealisasiFisik(detail_rekening.target_fisik_induk[0].b_3) }} </ion-col>
+            <ion-col> {{ printRealisasiFisik(detail_rekening.realisasi_fisik_induk[0].b_3) }} </ion-col>
+          </ion-row>
+          <ion-row>
+            <ion-col>Target Perubahan</ion-col>
+            <ion-col>Realisasi Perubahan</ion-col>
+          </ion-row>
+          <ion-row>
+            <ion-col> {{ printRealisasiFisik(detail_rekening.target_fisik_induk[0].b_3) }} </ion-col>
+            <ion-col> {{ printRealisasiFisik(detail_rekening.realisasi_fisik_induk[0].b_3) }} </ion-col>
+          </ion-row>
+        </ion-label>
+      </ion-item>
+      <ion-item>
+        <ion-label>
+          <ion-text color="primary"> April </ion-text>
+          <ion-row>
+            <ion-col>Target Induk</ion-col>
+            <ion-col>Realisasi Induk</ion-col>
+          </ion-row>
+          <ion-row>
+            <ion-col> {{ printRealisasiFisik(detail_rekening.target_fisik_induk[0].b_4) }} </ion-col>
+            <ion-col> {{ printRealisasiFisik(detail_rekening.realisasi_fisik_induk[0].b_4) }} </ion-col>
+          </ion-row>
+          <ion-row>
+            <ion-col>Target Perubahan</ion-col>
+            <ion-col>Realisasi Perubahan</ion-col>
+          </ion-row>
+          <ion-row>
+            <ion-col> {{ printRealisasiFisik(detail_rekening.target_fisik_induk[0].b_4) }} </ion-col>
+            <ion-col> {{ printRealisasiFisik(detail_rekening.realisasi_fisik_induk[0].b_4) }} </ion-col>
+          </ion-row>
+        </ion-label>
+      </ion-item>
+      <ion-item>
+        <ion-label>
+          <ion-text color="primary"> Mei </ion-text>
+          <ion-row>
+            <ion-col>Target Induk</ion-col>
+            <ion-col>Realisasi Induk</ion-col>
+          </ion-row>
+          <ion-row>
+            <ion-col> {{ printRealisasiFisik(detail_rekening.target_fisik_induk[0].b_5) }} </ion-col>
+            <ion-col> {{ printRealisasiFisik(detail_rekening.realisasi_fisik_induk[0].b_5) }} </ion-col>
+          </ion-row>
+          <ion-row>
+            <ion-col>Target Perubahan</ion-col>
+            <ion-col>Realisasi Perubahan</ion-col>
+          </ion-row>
+          <ion-row>
+            <ion-col> {{ printRealisasiFisik(detail_rekening.target_fisik_induk[0].b_5) }} </ion-col>
+            <ion-col> {{ printRealisasiFisik(detail_rekening.realisasi_fisik_induk[0].b_5) }} </ion-col>
+          </ion-row>
+        </ion-label>
+      </ion-item>
+      <ion-item>
+        <ion-label>
+          <ion-text color="primary"> Juni </ion-text>
+          <ion-row>
+            <ion-col>Target Induk</ion-col>
+            <ion-col>Realisasi Induk</ion-col>
+          </ion-row>
+          <ion-row>
+            <ion-col> {{ printRealisasiFisik(detail_rekening.target_fisik_induk[0].b_6) }} </ion-col>
+            <ion-col> {{ printRealisasiFisik(detail_rekening.realisasi_fisik_induk[0].b_6) }} </ion-col>
+          </ion-row>
+          <ion-row>
+            <ion-col>Target Perubahan</ion-col>
+            <ion-col>Realisasi Perubahan</ion-col>
+          </ion-row>
+          <ion-row>
+            <ion-col> {{ printRealisasiFisik(detail_rekening.target_fisik_induk[0].b_6) }} </ion-col>
+            <ion-col> {{ printRealisasiFisik(detail_rekening.realisasi_fisik_induk[0].b_6) }} </ion-col>
+          </ion-row>
+        </ion-label>
+      </ion-item>
+      <ion-item>
+        <ion-label>
+          <ion-text color="primary"> Juli </ion-text>
+          <ion-row>
+            <ion-col>Target Induk</ion-col>
+            <ion-col>Realisasi Induk</ion-col>
+          </ion-row>
+          <ion-row>
+            <ion-col> {{ printRealisasiFisik(detail_rekening.target_fisik_induk[0].b_7) }} </ion-col>
+            <ion-col> {{ printRealisasiFisik(detail_rekening.realisasi_fisik_induk[0].b_7) }} </ion-col>
+          </ion-row>
+          <ion-row>
+            <ion-col>Target Perubahan</ion-col>
+            <ion-col>Realisasi Perubahan</ion-col>
+          </ion-row>
+          <ion-row>
+            <ion-col> {{ printRealisasiFisik(detail_rekening.target_fisik_induk[0].b_7) }} </ion-col>
+            <ion-col> {{ printRealisasiFisik(detail_rekening.realisasi_fisik_induk[0].b_7) }} </ion-col>
+          </ion-row>
+        </ion-label>
+      </ion-item>
+      <ion-item>
+        <ion-label>
+          <ion-text color="primary"> Agustus </ion-text>
+          <ion-row>
+            <ion-col>Target Induk</ion-col>
+            <ion-col>Realisasi Induk</ion-col>
+          </ion-row>
+          <ion-row>
+            <ion-col> {{ printRealisasiFisik(detail_rekening.target_fisik_induk[0].b_8) }} </ion-col>
+            <ion-col> {{ printRealisasiFisik(detail_rekening.realisasi_fisik_induk[0].b_8) }} </ion-col>
+          </ion-row>
+          <ion-row>
+            <ion-col>Target Perubahan</ion-col>
+            <ion-col>Realisasi Perubahan</ion-col>
+          </ion-row>
+          <ion-row>
+            <ion-col> {{ printRealisasiFisik(detail_rekening.target_fisik_induk[0].b_8) }} </ion-col>
+            <ion-col> {{ printRealisasiFisik(detail_rekening.realisasi_fisik_induk[0].b_8) }} </ion-col>
+          </ion-row>
+        </ion-label>
+      </ion-item>
+      <ion-item>
+        <ion-label>
+          <ion-text color="primary"> September </ion-text>
+          <ion-row>
+            <ion-col>Target Induk</ion-col>
+            <ion-col>Realisasi Induk</ion-col>
+          </ion-row>
+          <ion-row>
+            <ion-col> {{ printRealisasiFisik(detail_rekening.target_fisik_induk[0].b_9) }} </ion-col>
+            <ion-col> {{ printRealisasiFisik(detail_rekening.realisasi_fisik_induk[0].b_9) }} </ion-col>
+          </ion-row>
+          <ion-row>
+            <ion-col>Target Perubahan</ion-col>
+            <ion-col>Realisasi Perubahan</ion-col>
+          </ion-row>
+          <ion-row>
+            <ion-col> {{ printRealisasiFisik(detail_rekening.target_fisik_induk[0].b_9) }} </ion-col>
+            <ion-col> {{ printRealisasiFisik(detail_rekening.realisasi_fisik_induk[0].b_9) }} </ion-col>
+          </ion-row>
+        </ion-label>
+      </ion-item>
+      <ion-item>
+        <ion-label>
+          <ion-text color="primary"> Oktober </ion-text>
+          <ion-row>
+            <ion-col>Target Induk</ion-col>
+            <ion-col>Realisasi Induk</ion-col>
+          </ion-row>
+          <ion-row>
+            <ion-col> {{ printRealisasiFisik(detail_rekening.target_fisik_induk[0].b_10) }} </ion-col>
+            <ion-col> {{ printRealisasiFisik(detail_rekening.realisasi_fisik_induk[0].b_10) }} </ion-col>
+          </ion-row>
+          <ion-row>
+            <ion-col>Target Perubahan</ion-col>
+            <ion-col>Realisasi Perubahan</ion-col>
+          </ion-row>
+          <ion-row>
+            <ion-col> {{ printRealisasiFisik(detail_rekening.target_fisik_induk[0].b_10) }} </ion-col>
+            <ion-col> {{ printRealisasiFisik(detail_rekening.realisasi_fisik_induk[0].b_10) }} </ion-col>
+          </ion-row>
+        </ion-label>
+      </ion-item>
+      <ion-item>
+        <ion-label>
+          <ion-text color="primary"> Nopember </ion-text>
+          <ion-row>
+            <ion-col>Target Induk</ion-col>
+            <ion-col>Realisasi Induk</ion-col>
+          </ion-row>
+          <ion-row>
+            <ion-col> {{ printRealisasiFisik(detail_rekening.target_fisik_induk[0].b_11) }} </ion-col>
+            <ion-col> {{ printRealisasiFisik(detail_rekening.realisasi_fisik_induk[0].b_11) }} </ion-col>
+          </ion-row>
+          <ion-row>
+            <ion-col>Target Perubahan</ion-col>
+            <ion-col>Realisasi Perubahan</ion-col>
+          </ion-row>
+          <ion-row>
+            <ion-col> {{ printRealisasiFisik(detail_rekening.target_fisik_induk[0].b_11) }} </ion-col>
+            <ion-col> {{ printRealisasiFisik(detail_rekening.realisasi_fisik_induk[0].b_11) }} </ion-col>
+          </ion-row>
+        </ion-label>
+      </ion-item>
+      <ion-item>
+        <ion-label>
+          <ion-text color="primary"> Desember </ion-text>
+          <ion-row>
+            <ion-col>Target Induk</ion-col>
+            <ion-col>Realisasi Induk</ion-col>
+          </ion-row>
+          <ion-row>
+            <ion-col> {{ printRealisasiFisik(detail_rekening.target_fisik_induk[0].b_12) }} </ion-col>
+            <ion-col> {{ printRealisasiFisik(detail_rekening.realisasi_fisik_induk[0].b_12) }} </ion-col>
+          </ion-row>
+          <ion-row>
+            <ion-col>Target Perubahan</ion-col>
+            <ion-col>Realisasi Perubahan</ion-col>
+          </ion-row>
+          <ion-row>
+            <ion-col> {{ printRealisasiFisik(detail_rekening.target_fisik_induk[0].b_12) }} </ion-col>
+            <ion-col> {{ printRealisasiFisik(detail_rekening.realisasi_fisik_induk[0].b_12) }} </ion-col>
+          </ion-row>
+        </ion-label>
+      </ion-item>
+    </ion-list>
   </div>
+
 </ion-content>
