--- a/src/app/list-kegiatan/list-kegiatan.page.html
+++ b/src/app/list-kegiatan/list-kegiatan.page.html
@@ -11,9 +11,8 @@
 <ion-content>
   <ion-searchbar [(ngModel)]="keyword" placeholder="Cari Kegiatan" animated="true" enterkeyhint="search" mode="ios" (search)="searchData()"></ion-searchbar>
   <ion-list lines="full" class="ion-no-margin">
-      <ion-item  *ngFor="let kegiatan of list_kegiatan; let i = index" (click)="listRekening(kegiatan.ID_Prog, kegiatan.Kd_Prog, kegiatan.Kd_Keg)">
+      <ion-item  *ngFor="let kegiatan of list_kegiatan; let i = index" button detail (click)="listRekening(kegiatan.ID_Prog, kegiatan.Kd_Prog, kegiatan.Kd_Keg)">
         <ion-label class="ion-text-wrap"> {{ kegiatan.Ket_Kegiatan }} <br> {{ formatUang(kegiatan.total_induk) }}</ion-label>
-        <ion-icon name="chevron-forward-outline" size="large" slot="end"></ion-icon>
       </ion-item>
   </ion-list>
 </ion-content>
