--- a/src/app/detail-rekening/detail-rekening.page.html
+++ b/src/app/detail-rekening/detail-rekening.page.html
@@ -12,9 +12,14 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content fullscreen="true">
+  <div *ngIf="isLoading">
+    <ion-text class="ion-text-center">
+      <h1>Loading...</h1>
+    </ion-text> 
+  </div>
   
-  <div *ngIf="detail_rekening" >
+  <div *ngIf="detail_rekening && !isLoading" >
     <h3>Data Keuangan</h3>
     <ion-list lines="full" class="ion-no-margin">
       <ion-item>
