--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -10,8 +10,8 @@
 <ion-content>
     <ion-img src="assets/images/logo-badung.png" style="padding: 3em 3em 1em 3em;"></ion-img>
     <ion-text color="primary ion-text-center">
-        <h3>SISTEM INFORMASI PELAPORAN & PEMANTAUAN PEMBANGUNAN (SIPPP) KABUPATEN BADUNG</h3>
-      </ion-text>
+        <h3 style="padding: 1em;">SISTEM INFORMASI PELAPORAN & PEMANTAUAN PEMBANGUNAN (SIPPP) KABUPATEN BADUNG</h3>
+    </ion-text>
     <form #f="ngForm" (ngSubmit)="login(f)">
     <ion-list lines="full" class="ion-no-margin">
         <ion-item>
